--- a/index.html
+++ b/index.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html> <!-- Объявление формата документа -->
+﻿<!DOCTYPE html> <!-- Объявление формата документа -->
 <html>
 	<head> <!-- Техническая информация о документе -->
 		<meta charset="UTF-8"> <!-- Определяем кодировку символов документа -->
@@ -21,7 +21,7 @@
 			    <li><a href="">Мамсина Арина</a></li>
 			    <li><a href="./Mitrichev Danila/index.html">Митричев Данила</a></li>
 			    <li><a href="">Мохнаткин Данил</a></li>
-			    <li><a href="">Пирогов Алексей</a></li>
+			    <li><a href="/Pirogov_Aleksey/Aleksey_Pirogov.html">Пирогов Алексей</a></li>
 			    <li><a href="">Полька Владислав</a></li>
 			    <li><a href="">Русанов Кирилл</a></li>
 			    <li><a href="">Рякин Богдан</a></li>
