--- a/Vladimir Frolov/vladimir_official.html
+++ b/Vladimir Frolov/vladimir_official.html
@@ -86,7 +86,7 @@
     		position: absolute;
     		border-radius: 5px;
     		top: 67px;
-    		right: 50px;
+    		left: 350px;
     		box-shadow: 7px 7px 5px rgba(0,0,0,0.6);
     		float: left;
 
