--- a/MokhnatkinDanila/Work.html
+++ b/MokhnatkinDanila/Work.html
@@ -23,7 +23,7 @@
 
 
 		</ol>
-<p>Данная страница постоянно <strong>редактируется</strong> </p>
+<p>Данная страница постоянно <strong>редактируется</strong> автором </p>
 </div>
 	
  <div class="photo">
