--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			    <li><a href="Aleksey Pirogov/Aleksey Pirogov.html">Пирогов Алексей</a></li>
 			    <li><a href="">Полька Владислав</a></li>
 			    <li><a href="">Русанов Кирилл</a></li>
-			    <li><a href="">Рякин Богдан</a></li>
+			    <li><a href="Bogdan Ryakin/index.html">Рякин Богдан</a></li>
 			    <li><a href="">Скорина Анастасия</a></li>
 			    <li><a href="">Тюрин Дмитрий</a></li>
 			    <li><a href="">Хоршев Иван</a></li>
