--- a/Konstantin Bukin/index.html
+++ b/Konstantin Bukin/index.html
@@ -1,5 +1,24 @@
+<!DOCTYPE html>
 <html>
 <head>
-	<title> Константин Букин </title>
+ <title>Константин Букин резюме</title>
 </head>
-</html>	
+<body link="#fff" vlink="#fff" bgcolor="#7b1fa2" align="center" >
+<font color="white">
+<H2>Резюме</H2>
+<hr>  Меня зовут Константин Букин
+
+<br>Я начинающий программист и я сделал несколько работ
+<br><ul align="left"> 
+<li><a href="https://codepen.io/kostetdit/pen/RwbeMrg">1 работа</a></li>
+<li><a href="https://codepen.io/kostetdit/pen/RwbeMeM">2 работа</a></li>
+<li><a href="">3 работа(не готова)</a></li>
+<li><a href="">4 работа(не готова)</a></li>
+<li><a href="https://codepen.io/kostetdit/pen/JjPBwoB">5 работа</a></li>
+<li><a href="">6 работа(не готова)</a></li>
+<li><a href="https://codepen.io/kostetdit/pen/wvwYRLG">7 работа</a></li>
+<li><a href="https://codepen.io/kostetdit/pen/yLBRGVO">8 работа</a></li>
+</ul>
+</font>
+</body>
+</html>
