--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			<li><a href="./Mitrichev Danila/index.html">Митричев Данила</a></li>
 			<li><a href="./MokhnatkinDanila/Work.html">Мохнаткин Данил</a></li>
 			<li><a href="Aleksey Pirogov/Aleksey Pirogov.html">Пирогов Алексей</a></li>
-			<li><a href="">Полька Владислав</a></li>
+			<li><a href="Pol'ka Vladislav/index.html">Полька Владислав</a></li>
 			<li><a href="">Русанов Кирилл</a></li>
 			<li><a href="Bogdan Ryakin/index.html">Рякин Богдан</a></li>
 			<li><a href="">Скорина Анастасия</a></li>
