--- a/Konstantin Bukin/index.html
+++ b/Konstantin Bukin/index.html
@@ -4,7 +4,7 @@
  <title>Константин Букин резюме</title>
 </head>
 <body link="#fff" vlink="#fff" bgcolor="#7b1fa2" align="center" >
-<font color="white">
+<font color="white" face= "Arial">
 <H2>Резюме</H2>
 <hr>  Меня зовут Константин Букин
 
