--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 		  	<ul class="widget-list">
 			    <li><a href="">Байдуллин Руслан</a></li>
 			    <li><a href="./Bogdan Bochkov/index.html">Бочков Богдан</a></li>
-			    <li><a href="">Дорофеев Данил</a></li>
+			    <li><a href="./Daniil Dorofeev/index.html">Дорофеев Даниил</a></li>
 			    <li><a href="">Ермолин Илья</a></li>
 			    <li><a href="">Капиталинин Максим</a></li>
 			    <li><a href="Klitvin Aleksandr/сайт/index.html">Клитвин Александр</a></li>
