--- a/Vladimir Frolov/vladimir_official.html
+++ b/Vladimir Frolov/vladimir_official.html
@@ -229,6 +229,9 @@
  				<td><a href="slider1.html"><div class="btn">Слайдер</div></a></td>
  			</tr>
  			<tr>
+ 				<td><a href="slider_3.html"><div class="btn">Слайдер #2</div></a></td>
+ 			</tr>
+ 			<tr>
  				<td><a href="kalkulator.html"><div class="btn">Калькулятор</div></a></td>
  			</tr>
  			<tr>
