--- a/Pirogov_Aleksey/Aleksey Pirogov.html
+++ b/Pirogov_Aleksey/Aleksey Pirogov.html
@@ -2,14 +2,18 @@
 <html>
 <head>
 	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	    <meta name="viewport" content="width=device-width, initial-scale=1">
 	<title>Pirogov Aleksey</title>
+	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">	
 	<style type="text/css">
 		 @import url('https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css');
 		body {
-    margin:0px;
-    padding:0px;
+    margin: 0px;
+    padding: 0px;
     font: 14px 'Verdana';
-    background: #2929;
+    background: #7695;
+    font-family: 'Montserrat Alternates', sans-serif;
 }
 ul {
     list-style: none;
@@ -40,7 +44,7 @@ ul.mmenuu > li > a:hover {
 ul.ssubmenuu {
     position: absolute;
     width: 240px;
-    top: 37px;
+    top: 15px;
     left:0px;
     display: none;
     background-color: white;
@@ -67,56 +71,187 @@ ul.mmenuu > li:hover > ul.ssubmenuu {
 	text-align: center; 
 }
 @import url(https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css);
-.social a {
+.round {
+    border-radius: 100px; 
+    border: 0px solid white; 
+    box-shadow: 0 0 7px #666; 
+    position: absolute;
+    top: 155px;
+    right: 890px;
+   }
+  .txt_2{
+  	position: absolute;
+  	justify-content: center;
+  	top: 300px;
+  	color: white;
+  	right: 800px;
+  }
+  .container{
+    width: 1000px;
+    position: relative;
+    display: flex;
+    justify-content: space-between;
+}
+
+.container .card{
+    position: relative;
+    cursor: pointer;
+}
+
+.container .card .face{
+    width: 300px;
+    height: 200px;
+    transition: 0.5s;
+    top: 250px;
+    right: -455px;
+    }
+
+.container .card .face.face1{
+    position: relative;
+    background: #333;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1;
+    transform: translateY(100px);
+}
+
+.container .card:hover .face.face1{
+    background: #ff0057;
+    transform: translateY(0);
+}
+
+.container .card .face.face1 .content{
+    opacity: 0.2;
+    transition: 0.5s;
+}
+
+.container .card:hover .face.face1 .content{
+    opacity: 1;
+}
+
+.container .card .face.face1 .content img{
+    max-width: 100px;
+}
+
+.container .card .face.face1 .content h3{
+    margin: 10px 0 0;
+    padding: 0;
+    color: #fff;
     text-align: center;
-    width: 30px;
-    height: 30px;
-    float: left;
+    font-size: 1.5em;
+}
+
+.container .card .face.face2{
+    position: relative;
     background: #fff;
-    border: 1px solid #ccc;
-    box-shadow: 0 2px 4px rgba(0,0,0,0.15), inset 0 0 50px rgba(0,0,0,0.1);
-    border-radius: 30px;
-    margin: 0 10px 10px 0;
-    padding: 6px;
-    color: #000;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 1px;
+    box-sizing: border-box;
+    box-shadow: 0 20px 50px rgba(0, 0, 0, 0.8);
+    transform: translateY(-100px);
 }
-.social {
-	position: relative;
-	left:1700px;
-	top: -120px;
+
+.container .card:hover .face.face2{
+    transform: translateY(0);
 }
-.youtube a:hover {background: #c4302b; color: #fff;}
-.vk a:hover {background: #5d84ae; color: #fff;}
+
+.container .card .face.face2 .content p{
+    margin: 0;
+    padding: 0;
+}
+
+.container .card .face.face2 .content a{
+    margin: 15px 0 0;
+    display:  inline-block;
+    text-decoration: none;
+    font-weight: 900;
+    color: #333;
+    padding: 10px;
+    border: 1px solid #333;
+}
+
+.container .card .face.face2 .content a:hover{
+    background: #333;
+    color: #fff;
+}
 
 	</style>
 </head>
 <body>
 	<ul class="mmenuu">
-    <li><a href=#>Слайдер</a>
+    <li><a href="slider.html">Слайдер</a>
     </li>
-    <li><a href=#>Фичи css</a>
+    <li><a href="">Фичи css</a>
         <ul class="ssubmenuu">
-            <li><a href=#>№1</a></li>
-            <li><a href=#>№2</a></li>
-			<li><a href=#>№3</a></li>
-            <li><a href=#>№4</a></li>
-			<li><a href=#>№5</a></li>
-            <li><a href=#>№6</a></li>
-			<li><a href=#>№7</a></li>
-            <li><a href=#>№8</a></li>
+            <li><a href="3dcard.html">1</a></li>
+            <li><a href="adaptblock.html">2</a></li>
+			<li><a href="chekbox.html">3</a></li>
+            <li><a href="css_ficha_10.html">4</a></li>
+			<li><a href="css_ficha_11.html">5</a></li>
+            <li><a href="css_ficha_12.html">6</a></li>
+			<li><a href="css_ficha_15.html">7</a></li>
+            <li><a href="css_ficha_16.html">8</a></li>
+            <li><a href="css_ficha_17.html">10</a></li>
+            <li><a href="css_ficha_18.html">11</a></li>
+            <li><a href="gamburger.html">12</a></li>
+            <li><a href="gamburger1.html">13</a></li>
+            <li><a href="gamburger2.html">14</a></li>
         </ul>
     </li>
-    <li><a href=#>Калькулятор</a>
+    <li><a href="flepiberd.html">Игра</a>
     </li>
 </ul>
+<p><img src="Screenshot_6.png" alt="" class="round">
 <h1 class="txt">Пирогов Алексей</h1>
 <p class="txt">Git Hub</p>
-
-<div class="social youtube">
-    <a href="https://www.youtube.com/channel/UCe0plcAyXdQt-6XZ_FzIGzQ?view_as=subscriber" target="_blank"><i class="fa fa-youtube fa-2x"></i></a>
-</div>
-<div class="social vk">
-    <a href="vk.com/blvck1312" target="_blank"><i class="fa fa-vk fa-2x"></i></a>    
-</div>
+<h2 class="txt_2">Я начинающий веб разработчик</h2>
+    <div class="container">
+        <div class="card">
+            <div class="face face1">
+                <div class="content">
+                    <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/design_128.png?raw=true">
+                    <h3>Слайдер</h3>
+                </div>
+            </div>
+            <div class="face face2">
+                <div class="content">
+                    <p>Просто слайдер</p>
+                        <a href="slider.html">OK</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="face face1">
+                <div class="content">
+                    <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/code_128.png?raw=true">
+                    <h3>Фичи</h3>
+                </div>
+            </div>
+            <div class="face face2">
+                <div class="content">
+                    <p>Фичи Артем Исламов</p>
+                        <a href="Фичи">OK</a>
+                </div>
+            </div>
+        </div>
+        <div class="card">
+            <div class="face face1">
+                <div class="content">
+                    <img src="https://github.com/Jhonierpc/WebDevelopment/blob/master/CSS%20Card%20Hover%20Effects/img/launch_128.png?raw=true">
+                    <h3>Игра</h3>
+                </div>
+            </div>
+            <div class="face face2">
+                <div class="content">
+                    <p>Фелепи Берд</p>
+                        <a href="flepiberd.html">OK</a>
+                </div>
+            </div>
+        </div>
+    </div>
+	</div>
 </body>
 </html>
