--- a/Vladimir Frolov/vladimir_official.html
+++ b/Vladimir Frolov/vladimir_official.html
@@ -137,7 +137,7 @@
 		}
 		.btn {
 			width: 200px;
-      		height: 30px;
+      		height: 50px;
       		background: #fff;
       		border-radius: 5px;
       		font-family: 'Arctic', cursive;
@@ -226,25 +226,25 @@
  	<div class="cnt1">
  		<table class="tabl">
  			<tr>
- 				<td><a href="slider1.html"><div class="btn">Слайдер</div></a></td>
+ 				<td><a href="slider1.html"><div class="btn"><i class="fa fa-picture-o" aria-hidden="true"></i></div></a></td>
+ 				<td><a href="slider_3.html"><div class="btn"><i class="fa fa-picture-o" aria-hidden="true"></i></div></a></td>
  			</tr>
  			<tr>
- 				<td><a href="slider_3.html"><div class="btn">Слайдер #2</div></a></td>
+ 				<td><a href="kalkulator.html"><div class="btn"><i class="fa fa-calculator" aria-hidden="true"></i></div></a></td>
+ 				<td><a href="video.html"><div class="btn"><i class="fa fa-video-camera" aria-hidden="true"></i></div></a></td>
  			</tr>
  			<tr>
- 				<td><a href="kalkulator.html"><div class="btn">Калькулятор</div></a></td>
+ 				<td><a href="login.html"><div class="btn"><i class="fa fa-sign-out" aria-hidden="true"></i></div></a></td>
+ 				<td><a href="accordion_menu.html"><div class="btn"><i class="fa fa-bars" aria-hidden="true"></i></div></a></td>
  			</tr>
  			<tr>
- 				<td><a href="video.html"><div class="btn">Видео</div></a></td>
+ 				<td><a href="heart.html"><div class="btn"><i class="fa fa-heart" aria-hidden="true"></i></div></a></td>
+ 				<td><a href="poiskovaya_sistema.html"><div class="btn"><i class="fa fa-search" aria-hidden="true"></i></div></a></td>
  			</tr>
  			<tr>
- 				<td><a href="login.html"><div class="btn">Авторизация</div></a></td>
- 			</tr>
- 			<tr>
- 				<td><a href="accordion_menu.html"><div class="btn">Меню</div></a></td>
- 			</tr>
- 			<tr>
- 				<td><a href="poiskovaya_sistema.html"><div class="btn">Поиск</div></a></td>
+ 				<td><a href="ikonki_animation.html"><div class="btn"><i class="fa fa-eercast" aria-hidden="true"></i>
+</div></a></td>
+ 				<td><a href="rainbow_button.html"><div class="btn"><i class="fa fa-keyboard-o" aria-hidden="true"></i></div></a></td>
  			</tr>
  		</table>
  	</div>
