--- a/MokhnatkinDanila/Sayt.html
+++ b/MokhnatkinDanila/Sayt.html
@@ -2,7 +2,7 @@
 	<html>
 	<head>
 		<META charset="utf-8">
-		<title>Персональный сайт</title>
+		<title>Персональный сайт /</title>
 		<script src="https://kit.fontawesome.com/30655e4cfd.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
