--- a/Vladimir Frolov/vladimir_official.html
+++ b/Vladimir Frolov/vladimir_official.html
@@ -15,6 +15,7 @@
 			padding: 0;
 			background: #D9D9D9;
 			color: #6C6960;
+			height: 1000px;
 		}
 		.fon {
 			width: 250px;
@@ -163,6 +164,42 @@
 			align-content: center;
 			top: 30px;
 		}
+		.tabl1 {
+			position: relative;
+			display: flex;
+			justify-content: center;
+			align-content: center;
+			top: 80px;
+		}
+		.content2 {
+			width: 950px;
+    		height: 400px;
+    		background: #fff;
+    		position: absolute;
+    		border-radius: 5px;
+    		top: 500px;
+    		left: 350px;
+    		box-shadow: 7px 7px 5px rgba(0,0,0,0.6);
+    		float: left;
+		}
+		.bar {
+			width: 100px;
+			height: 15px;
+			background: #6C6960;
+			border-radius: 5px;
+		}
+		.bar1 {
+			position: relative;
+			right: 50px;
+			font-size: 20px;
+		}
+		.bar2 {
+			width: 100px;
+			height: 15px;
+			background: #fff;
+			border-radius: 5px;
+			border: 2px solid #6C6960;
+		}
 	</style>
 </head>
 <body>
@@ -248,6 +285,43 @@
  			</tr>
  		</table>
  	</div>
+ </div>
+ <div class="content2">
+ 	<h1 class="txt">Мои навыки</h1>
+ 	<table class="tabl1">
+ 		<tr>
+ 			<td><h1 class="bar1">HTML5</h1></td>
+ 			<td><div class="bar"></div></td>
+ 			<td><div class="bar"></div></td>
+ 			<td><div class="bar"></div></td>
+ 			<td><div class="bar"></div></td>
+ 			<td><div class="bar2"></div></td>
+ 		</tr>
+ 		<tr>
+ 			<td><h1 class="bar1">CSS3</h1></td>
+ 			<td><div class="bar"></div></td>
+ 			<td><div class="bar"></div></td>
+ 			<td><div class="bar"></div></td>
+ 			<td><div class="bar2"></div></td>
+ 			<td><div class="bar2"></div></td>
+ 		</tr>
+ 		<tr>
+ 			<td><h1 class="bar1">JavaScript</h1></td>
+ 			<td><div class="bar"></div></td>
+ 			<td><div class="bar"></div></td>
+ 			<td><div class="bar2"></div></td>
+ 			<td><div class="bar2"></div></td>
+ 			<td><div class="bar2"></div></td>
+ 		</tr>
+ 		<tr>
+ 			<td><h1 class="bar1">JQuery</h1></td>
+ 			<td><div class="bar"></div></td>
+ 			<td><div class="bar"></div></td>
+ 			<td><div class="bar2"></div></td>
+ 			<td><div class="bar2"></div></td>
+ 			<td><div class="bar2"></div></td>
+ 		</tr>
+ 	</table>
  </div>
 </body>
 </html>
