а ну да +Flesh Heap

--- a/Bogdan Ryakin/index.html
+++ b/Bogdan Ryakin/index.html
@@ -16,7 +16,7 @@
 					<p>Ученик Тольяттинского Гуманитарного колледжа</p>
 				</header>
 				<footer>
-					<a href="#banner" class="button style2 scrolly-middle">Действуем по плану</a>
+					<a href="#banner" class="button style2 scrolly-middle">Продолжить</a>
 				</footer>
 			</section>
 
@@ -59,8 +59,8 @@
 			<article class="container box style2">
 				<header>
 					<h2>тут будут фичи</h2>
-					<p>я@ ты@я@ ты@я@ ты@<br />
-					я@ ты@я@ ты@я@ ты@я@ ты@.</p>
+					<p>фич пока нет, я работаю над этим<br />
+					</p>
 				</header>
 				<div class="inner gallery">
 					<div class="row gtr-0">
@@ -82,7 +82,7 @@
 			<article class="container box style3">
 				<header>
 					<h2>Обратная связь или что-то типа того</h2>
-					<p>тут будет что-то типа фидбека.</p>
+					<p>похоже, придётся от этого отказаться</p>
 				</header>
 				<form method="post" action="#">
 					<div class="row gtr-50">
