--- a/index.html
+++ b/index.html
@@ -1,47 +1,47 @@
 ﻿<!DOCTYPE html> <!-- Объявление формата документа -->
 <html>
-	<head> <!-- Техническая информация о документе -->
-		<meta charset="UTF-8"> <!-- Определяем кодировку символов документа -->
-		<title>Пкс 21</title> <!-- Задаем заголовок документа -->
-		<link rel="stylesheet" type="text/css" href="style.css"> <!-- Подключаем внешнюю таблицу стилей -->
-		<script src="script.js"></script> <!-- Подключаем сценарии -->
-	</head>
-	<body> <!-- Основная часть документа -->
+<head> <!-- Техническая информация о документе -->
+	<meta charset="UTF-8"> <!-- Определяем кодировку символов документа -->
+	<title>Пкс 21</title> <!-- Задаем заголовок документа -->
+	<link rel="stylesheet" type="text/css" href="style.css"> <!-- Подключаем внешнюю таблицу стилей -->
+	<script src="script.js"></script> <!-- Подключаем сценарии -->
+</head>
+<body> <!-- Основная часть документа -->
 	
-		<div class="widget">
-		  <h3 class="widget-title">Работы студентов группы Пкс 21</h3>
-		  	<ul class="widget-list">
-			    <li><a href="">Байдуллин Руслан</a></li>
-			    <li><a href="./Bogdan Bochkov/index.html">Бочков Богдан</a></li>
-			    <li><a href="">Дорофеев Данил</a></li>
-			    <li><a href="">Ермолин Илья</a></li>
-			    <li><a href="">Капиталинин Максим</a></li>
-			    <li><a href="Klitvin Aleksandr/сайт/index.html">Клитвин Александр</a></li>
-			    <li><a href="./KapitalininMaxim/Maxim.html">Капиталинин Максим</a></li>
-			    <li><a href="Klitvin Aleksandr/сайт/index.html"> Клитвин Александр</a></li>
-			    <li><a href="">Малинин Сергей</a></li>
-			    <li><a href="">Мамсина Арина</a></li>
-			    <li><a href="./Mitrichev Danila/index.html">Митричев Данила</a></li>
-			    <li><a href="MockhnatkinDanila/Work.html">Мохнаткин Данил</a></li>
-			    <li><a href="Aleksey Pirogov/Aleksey Pirogov.html">Пирогов Алексей</a></li>
-			    <li><a href="">Полька Владислав</a></li>
-			    <li><a href="">Русанов Кирилл</a></li>
-			    <li><a href="">Рякин Богдан</a></li>
-			    <li><a href="">Скорина Анастасия</a></li>
-			    <li><a href="">Тюрин Дмитрий</a></li>
-			    <li><a href="">Хоршев Иван</a></li>
-			    <li><a href="./Churbanov/index.html">Чурбанов Артем</a></li>
-			    <li><a href="">Шестаков Андрей</a></li>
-			    <li><a href="">Сапожников Павел</a></li>
-			    <li><a href="./Vladimir Frolov/vladimir_official.html">Фролов Владимир</a></li>
-			    <li><a href="./Konstantin Bukin/index.html">Букин Константин</a></li>
-			    <li><a href="./Vitaliy Isaev/index.html">Исаев Виталий</a></li>
-			    <li><a href="">Радаев Данил</a></li>
-			    <li><a href=""></a></li>
-			    
-			    <li><a href="https://napastyuk.github.io/">ИЛЬЯ НАПАСТЮК</a></li>
-			    <li><a href="./task.html">Задания????!!!!</a></li>
-  			</ul>
-		</div>
-	</body>
+	<div class="widget">
+		<h3 class="widget-title">Работы студентов группы Пкс 21</h3>
+		<ul class="widget-list">
+			<li><a href="">Байдуллин Руслан</a></li>
+			<li><a href="./Bogdan Bochkov/index.html">Бочков Богдан</a></li>
+			<li><a href="./Daniil Dorofeev/index.html">Дорофеев Даниил</a></li>
+			<li><a href="">Ермолин Илья</a></li>
+			<li><a href="">Капиталинин Максим</a></li>
+			<li><a href="Klitvin Aleksandr/сайт/index.html">Клитвин Александр</a></li>
+			<li><a href="./KapitalininMaxim/Maxim.html">Капиталинин Максим</a></li>
+			<li><a href="Klitvin Aleksandr/сайт/index.html"> Клитвин Александр</a></li>
+			<li><a href="">Малинин Сергей</a></li>
+			<li><a href="">Мамсина Арина</a></li>
+			<li><a href="./Mitrichev Danila/index.html">Митричев Данила</a></li>
+			<li><a href="MockhnatkinDanila/Work.html">Мохнаткин Данил</a></li>
+			<li><a href="Aleksey Pirogov/Aleksey Pirogov.html">Пирогов Алексей</a></li>
+			<li><a href="">Полька Владислав</a></li>
+			<li><a href="">Русанов Кирилл</a></li>
+			<li><a href="">Рякин Богдан</a></li>
+			<li><a href="">Скорина Анастасия</a></li>
+			<li><a href="">Тюрин Дмитрий</a></li>
+			<li><a href="">Хоршев Иван</a></li>
+			<li><a href="./Churbanov/index.html">Чурбанов Артем</a></li>
+			<li><a href="">Шестаков Андрей</a></li>
+			<li><a href="">Сапожников Павел</a></li>
+			<li><a href="./Vladimir Frolov/vladimir_official.html">Фролов Владимир</a></li>
+			<li><a href="./Konstantin Bukin/index.html">Букин Константин</a></li>
+			<li><a href="./Vitaliy Isaev/index.html">Исаев Виталий</a></li>
+			<li><a href="">Радаев Данил</a></li>
+			<li><a href=""></a></li>
+			
+			<li><a href="https://napastyuk.github.io/">ИЛЬЯ НАПАСТЮК</a></li>
+			<li><a href="./task.html">Задания????!!!!</a></li>
+		</ul>
+	</div>
+</body>
 </html>
