--- a/Bogdan Bochkov/index.html
+++ b/Bogdan Bochkov/index.html
@@ -17,6 +17,8 @@
 <li><a href="https://codepen.io/PiromanX0/pen/oNvapvE">7 работа</a></li>
 <li><a href="https://codepen.io/PiromanX0/pen/xxKypbL">8 работа</a></li>
 <li><a href="https://codepen.io/PiromanX0/pen/ZEzqZNX">9 работа</a></li>
+<li><a href="https://codepen.io/PiromanX0/pen/RwwwXMe">10 работа</a></li>
+<li><a href="https://codepen.io/PiromanX0/pen/rNNNXKy">11 работа</a></li>
 </ul>
 </body>
 </html>
