--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
 			<li><a href="">Мамсина Арина</a></li>
 			<li><a href="./Mitrichev Danila/index.html">Митричев Данила</a></li>
 			<li><a href="MockhnatkinDanila/Work.html">Мохнаткин Данил</a></li>
-			<li><a href="Aleksey Pirogov/Aleksey Pirogov.html">Пирогов Алексей</a></li>
+			<li><a href="./Pirogov_Aleksey/Aleksey Pirogov.html">Пирогов Алексей</a></li>
 			<li><a href="Pol'ka Vladislav/index.html">Полька Владислав</a></li>
 			<li><a href="">Русанов Кирилл</a></li>
 			<li><a href="">Рякин Богдан</a></li>
