--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 			    <li><a href="">Малинин Сергей</a></li>
 			    <li><a href="">Мамсина Арина</a></li>
 			    <li><a href="./Mitrichev Danila/index.html">Митричев Данила</a></li>
-			    <li><a href="MockhnatkinDanila/Work.html">Мохнаткин Данил</a></li>
+			    <li><a href="./MokhnatkinDanila/Sayt.html">Мохнаткин Данил</a></li>
 			    <li><a href="./Pirogov_Aleksey/Aleksey Pirogov.html">Пирогов Алексей</a></li>
 			    <li><a href="">Полька Владислав</a></li>
 			    <li><a href="">Русанов Кирилл</a></li>
