--- a/Kirill Rusanov/index.html
+++ b/Kirill Rusanov/index.html
@@ -27,8 +27,8 @@
                         <div class="col-md-12">
                             <figure> <img src="images/profile_img.png" alt="Avatar"> </figure>
                             <h1>Русанов Кирилл</h1>
-                            <p>Мне 17 лет я - начинающий C# и Java программист, Back-end разработчик, Web-верстальщик и я студент православного <a href="http://gumcollege.ru/">гуманитарного колледжа г. Тольятти.</a>
-                                <br> Живу в Тольятти. Создаю сайты как с нуля, так и на основе CMS (Wordpress и др.). Разрабатываю программы на C# и Java. Знаю английский на уровне B1-B2, умею читать английский документаций. Легко обучаемый, имею огромный интерес к сфере IT. C удовольствием работаю в команде. </p>
+                            <p> Я начинающий C# программист, студент православного <a href="http://gumcollege.ru/">гуманитарного колледжа г. Тольятти.</a>
+                                <br> Живу в Тольятти. Разрабатываю программы на C#. Знаю английский на уровне B1-B2, умею читать английский документаций. C удовольствием работаю в команде. </p>
                         </div>
                     </div>
                     <ul class="fh5co-social">
