--- a/Vladimir Frolov/vladimir_official.html
+++ b/Vladimir Frolov/vladimir_official.html
@@ -16,6 +16,7 @@
 			background: #D9D9D9;
 			color: #6C6960;
 			height: 1000px;
+			display: flex;	
 		}
 		.fon {
 			width: 250px;
@@ -86,7 +87,7 @@
     		background: #fff;
     		position: absolute;
     		border-radius: 5px;
-    		top: 67px;
+    		top: 50px;
     		left: 350px;
     		box-shadow: 7px 7px 5px rgba(0,0,0,0.6);
     		float: left;
@@ -177,7 +178,7 @@
     		background: #fff;
     		position: absolute;
     		border-radius: 5px;
-    		top: 500px;
+    		top: 480px;
     		left: 350px;
     		box-shadow: 7px 7px 5px rgba(0,0,0,0.6);
     		float: left;
