Pol'ka Vladislav

--- a/Pol'ka Vladislav/index.html
+++ b/Pol'ka Vladislav/index.html
@@ -44,6 +44,7 @@
 			<a class="p7" href="header/index.html">Head</a>
 			<a class="p8" href="footer/index.html">Footer</a>
 			<a class="p9" href="scroll/index.html">Scroll</a>
+			<a class="p10" href="checkbox/index.html">Checkbox</a>
 		</div>
 
 		<hr class="palka2">
