--- a/KapitalininMaxim/project.html
+++ b/KapitalininMaxim/project.html
@@ -4,26 +4,14 @@
 <link rel="stylesheet" href="project.css">
 </head>
 <body>
-	<br>
-<table>
-<tr>
-  <th>Проекты</th>
-</tr>
-<tr>
-  <td><font color="#F9C941"><a href="3/3.html">CSS-фича №3</a></td>
- </tr>
-<tr>
-  <td><font color="#F9C941"><a href="4/4.html">CSS-фича №4</a></td>
-</tr>
-<tr>
-  <td><font color="#F9C941"><a href="7/7.html">CSS-фича №7</a></td>
-</tr>
-<tr>
-  <td><font color="#F9C941"><a href="Калькулятор/main.html">Мой калькулятор</a></td>
-</tr>
-<tr>
-  <td><font color="#F9C941"><a href="Game/main.html">Моя первая игра</a></td>
-</tr>
-</table>
+	<a href="index.html"><b>Main</b></a>
+	<a href="project.html">My Projects</a>
+	<a href="about.html">About Me</a>
+	<a href="contacts.html">Contacts</a>
+	<a href="3/3.html"><img src="img/1.jpg" width="300px" height="300px"></a>
+	<a href="4/4.html"><img src="img/2.jpg" width="300px" height="300px"></a>
+	<a href="7/7.html"><img src="img/3.jpg" width="300px" height="300px"></a>
+	<a href="Game/main.html"><img src="img/5.jpg" width="300px" height="300px"></a>
+	<a href="Калькулятор/main.html"><img src="img/6.jpg" width="300px" height="300px"></a>
 </body>
 </html>
