--- a/KapitalininMaxim/about.html
+++ b/KapitalininMaxim/about.html
@@ -1,10 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+	<link rel="stylesheet" type="text/css" href="about.css">
 	<meta charset="UTF-8">
 	<title>About Me</title>
 </head>
-<body>
-	
+<body>	
+<a href="index.html"><b>Main</b></a>
+<a href="project.html">My Projects</a>
+<a href="about.html">About Me</a>
+<a href="contacts.html">Contacts</a>
 </body>
 </html>
