--- a/Pol'ka Vladislav/index.html
+++ b/Pol'ka Vladislav/index.html
@@ -54,6 +54,7 @@
 			<a class="hm1" href="vidhtml/index.html">09.09.19</a>
 			<a class="hm2" href="Slider/index.html">16.09.19</a>
 			<a class="hm3" href="project/index.html">03.10.19</a>
+			<a class="hm4" href="window/index.html">07.10.19</a>
 		</div>
 
 		<footer>
