klitvin add file game

--- a/Klitvin Aleksandr/сайт/index.html
+++ b/Klitvin Aleksandr/сайт/index.html
@@ -14,6 +14,7 @@
     <a href="#">Главная</a>
     <a href="https://vk.com">ВК</a>
     <a href="https://www.google.com/intl/ru/gmail/about/#">Gmail</a>
+    <a href="game/игруля/index.html">Игры</a>
     <p>89279765793</p>
     </div>
   </div>
