--- a/MokhnatkinDanila/Sayt.html
+++ b/MokhnatkinDanila/Sayt.html
@@ -7,6 +7,7 @@
 	</head>
 	<body>
 		<link rel="stylesheet" href="Sayt.css">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<header>
 		<img src="fon.jpg">
 	</header>
@@ -27,11 +28,123 @@
 		<li> <a href="Css7.html">Css фича №7 </a> </li>
 		<li> <a href="Css8.html">Css фича №8 </a> </li>
 		<li> <a href="#"> Css фича №9 </a> </li>
-		<li> <a href="#">Ссылочка на Bootstrap</a> </li>
-		<li> <a href="#">Ссылочка на Wix</a> </li>
+		<li> <a href="#modal_open">Открыть модальное окно</a></li>
 		</ol>
 	</div>
+	
+<div id="modal_open" class="my_modal">
+  <div class="my_modal-dialog">
+    <div class="my_modal-content">
+      <div class="my_modal-header">
+        <p class="my_modal-title">Вау, модальное окно</p>
+        <a href="#" title="Закрыть модальное окно" class="close">×</a>
+      </div>
+      <div class="my_modal-body">    
+        <p>Как и было сказано, выполнена реализация модального окна</p>
+        <br> <h3>С увеличением строк текста, увеличивается и окно.</h3>
+        <br> Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
+        tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam,
+        quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo
+        consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse
+        cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non
+        proident, sunt in culpa qui officia deserunt mollit anim id est laborum.
+      </div>
+    </div>
+  </div>
+</div>
+<!-- кнопка -->
+<style type="text/css">
+    .my_modal{
+    	position:fixed;
+    	top:0;
+    	right:0;
+    	bottom:0;
+    	left:0;
+    	background:rgba(0,0,0,0.5);
+    	z-index:1050;
+    	display:none;
+    	margin:0;
+    	padding:0;
+    	}
+    	.my_modal:target{
+    		display:block;
+    		overflow-y:auto;
+    	}
+    .my_modal-dialog{
+    	position:relative;
+    	width:auto;
+    	margin:10px;}
+    	@media (min-width:576px){
+    	.my_modal-dialog{
+    		max-width:460px;
+    		margin:30px auto;
+    		}
+    	}
+    	.my_modal-content{
+    		position:relative;
+    		display:-webkit-box;
+    		display:-webkit-flex;
+    		display:-ms-flexbox;
+    		display:flex;
+    		-webkit-box-orient:vertical;
+    		-webkit-box-direction:normal;
+    		-webkit-flex-direction:column;
+    		-ms-flex-direction:column;
+    		flex-direction:column;
+    		background-color:#fff;
+    		-webkit-background-clip:padding-box;
+    		background-clip:padding-box;
+    		border:1px solid rgba(0,0,0,.2);
+    		border-radius:6px;outline:0;
+    		}
+    		@media (min-width:768px){
+    		.my_modal-content{
+    			-webkit-box-shadow:0 5px 15px rgba(0,0,0,.5);
+    			box-shadow:0 5px 15px rgba(0,0,0,.5);}
+    		}
+    .my_modal-header{
+    	display:block;
+    	padding:14px 14px 4px;
+    }
+    .my_modal-title{
+    	margin-top:0;
+    	margin-bottom:0;
+    	line-height:1.5;
+    	font-size:1.25rem;
+    	font-weight:500;
+    	border-bottom:1px solid #d4d4d4;
+    }
+    .close{padding:1px 5px 0;
+    	border:1px solid #000;
+    	border-radius:50%;
+    	font-family:sans-serif;
+    	font-size:24px;
+    	font-weight:700;
+    	line-height:1;
+    	color:#000;
+    	text-shadow:0 1px 0 #fff;
+    	opacity:.5;
+    	text-decoration:none;
+    	top:4px;
+    	right:4px;position:absolute;
+    	}
+    	.close:focus,.close:hover{
+    		color:#000;
+    		text-decoration:none;
+    		cursor:pointer;
+    		opacity:.75;}
+    .my_modal-body{
+    	position:relative;
+    	-webkit-box-flex:1;
+    	-webkit-flex:1 1 auto
+    	-ms-flex:1 1 auto;
+    	flex:1 1 auto;
+    	padding:15px;
+    	overflow:auto;}
+  </style>
+</head>
 
+<!-- Конец кода кнопки -->
 	<footer>
 		<div class="awesome">
 	  <a href="#"><i class="fas fa-camera-retro"></i></a> 
@@ -39,7 +152,7 @@
       <a href="#"><i class="fas fa-calculator"></i></a>
       <a href="Work.html"><i class="fas fa-home"></i></a>
 		</div>
-		Here maybe was your banner
+		<h5>Сайт ещё редактируется</h5>
 	</footer>
 	</body>
 	</html>
