add modal buttom

--- a/Kirill Rusanov/index.html
+++ b/Kirill Rusanov/index.html
@@ -63,6 +63,7 @@
                                 <div class="work"><a href="Css17/index.html">Фича 17</a></div>
                                 <div class="work"><a href="Css18/index.html">Фича 18</a></div>
                                 <div class="work"><a href="Slider/index.html">Слайдер</a></div>
+                                <div class="work"><a href="modal/index.html">Модальное окно</a></div>
                             </div>
                         </div>
                     </div>
