--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <li><a href="./Kirill Rusanov/index.html">Русанов Кирилл</a></li>
                 <li><a href="">Рякин Богдан</a></li>
                 <li><a href="">Скорина Анастасия</a></li>
-                <li><a href="">Тюрин Дмитрий</a></li>
+                <li><a href="./Dima Turin/index.html">Тюрин Дмитрий</a></li>
                 <li><a href="">Хоршев Иван</a></li>
                 <li><a href="./Churbanov/index.html">Чурбанов Артем</a></li>
                 <li><a href="">Шестаков Андрей</a></li>
@@ -64,7 +64,7 @@
             <li><a href="./Kirill Rusanov/index.html">Русанов Кирилл</a></li>
             <li><a href="">Рякин Богдан</a></li>
             <li><a href="">Скорина Анастасия</a></li>
-            <li><a href="">Тюрин Дмитрий</a></li>
+            <li><a href="./Dima Turin/index.html">Тюрин Дмитрий</a></li>
             <li><a href="">Хоршев Иван</a></li>
             <li><a href="./Churbanov/index.html">Чурбанов Артем</a></li>
             <li><a href="">Шестаков Андрей</a></li>
