--- a/KapitalininMaxim/index.html
+++ b/KapitalininMaxim/index.html
@@ -23,5 +23,14 @@
 		<a href="contacts.html">Contacts</a>
 		  </div>
 </div>
+<div id="okno">
+      Сайт на стадии разработки<br>
+      <a href="#" class="close">Закрыть окно</a>
+    </div>
+     <br>
+     <br>
+     <br>
+     <br>
+    <a href="#okno">Дополнительная информация</a>
 </body>
 </html>
