--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <li><a href="./Mitrichev Danila/index.html">Митричев Данила</a></li>
         <li><a href="./MokhnatkinDanila/Sayt.html">Мохнаткин Данил</a></li>
         <li><a href="./Pirogov_Aleksey/Aleksey Pirogov.html">Пирогов Алексей</a></li>
-        <li><a href="">Полька Владислав</a></li>
+        <li><a href="Pol'ka Vladislav/index.html">Полька Владислав</a></li>
         <li><a href="./Kirill Rusanov/index.html">Русанов Кирилл</a></li>
         <li><a href="">Рякин Богдан</a></li>
         <li><a href="">Скорина Анастасия</a></li>
