--- a/Vladimir Frolov/vladimir_official.html
+++ b/Vladimir Frolov/vladimir_official.html
@@ -236,6 +236,9 @@
         	font-size: 25px;
         	cursor:pointer;
       	}
+      	.close:hover {
+      		transform: scale(1.2, 1.2);
+      	}
       	.fa-thermometer-three-quarters {
       		font-size: 100px;
       		top: 30px;
