--- a/Vladimir Frolov/vladimir_official.html
+++ b/Vladimir Frolov/vladimir_official.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<link rel="shortcut icon" href="https://cdn.icon-icons.com/icons2/325/PNG/256/Letter-F-icon_34760.png" type="image/x-icon">
+	<link rel="shortcut icon" href="froloff.png" type="image/x-icon">
 	<meta charset="utf-8">
 	<title>Фролов|Оффициальная страница</title>
 	<style type="text/css">
