--- a/KapitalininMaxim/project.html
+++ b/KapitalininMaxim/project.html
@@ -4,6 +4,7 @@
 <link rel="stylesheet" href="project.css">
 </head>
 <body>
+	<center>
 	<a href="index.html"><b>Main</b></a>
 	<a href="project.html">My Projects</a>
 	<a href="about.html">About Me</a>
@@ -13,5 +14,6 @@
 	<a href="7/7.html"><img src="img/3.jpg" width="300px" height="300px"></a>
 	<a href="Game/main.html"><img src="img/5.jpg" width="300px" height="300px"></a>
 	<a href="Калькулятор/main.html"><img src="img/6.jpg" width="300px" height="300px"></a>
+	</center>
 </body>
 </html>
