--- a/KapitalininMaxim/about.html
+++ b/KapitalininMaxim/about.html
@@ -6,9 +6,21 @@
 	<title>About Me</title>
 </head>
 <body>	
-<a href="index.html"><b>Main</b></a>
-<a href="project.html">My Projects</a>
-<a href="about.html">About Me</a>
-<a href="contacts.html">Contacts</a>
+<center>
+	<a href="index.html"><b>Main</b></a>
+	<a href="project.html">My Projects</a>
+	<a href="about.html">About Me</a>
+	<a href="contacts.html">Contacts</a>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<br>
+	<h1>Всем привет! Меня зовут Максим и я начинающий программист<h1>
+</center>
 </body>
 </html>
