--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         <li><a href="./Bogdan Bochkov/index.html">Бочков Богдан</a></li>
         <li><a href="./Daniil Dorofeev/index.html">Дорофеев Данил</a></li>
         <li><a href="">Ермолин Илья</a></li>
-        <li><a href="./KapitalininMaxim/Maxim.html">Капиталинин Максим</a></li>
+        <li><a href="./KapitalininMaxim/index.html">Капиталинин Максим</a></li>
         <li><a href="Klitvin Aleksandr/сайт/index.html">Клитвин Александр</a></li>
         <li><a href="">Малинин Сергей</a></li>
         <li><a href="">Мамсина Арина</a></li>
