--- a/MokhnatkinDanila/Sayt.html
+++ b/MokhnatkinDanila/Sayt.html
@@ -2,7 +2,7 @@
 	<html>
 	<head>
 		<META charset="utf-8">
-		<title>Персональный сайт /</title>
+		<title>Персональный сайт</title>
 		<script src="https://kit.fontawesome.com/30655e4cfd.js" crossorigin="anonymous"></script>
 	</head>
 	<body>
@@ -27,8 +27,9 @@
 		<li> <a href="Cssfich5.html"> Сss фича №5 </a> </li>
 		<li> <a href="Css7.html">Css фича №7 </a> </li>
 		<li> <a href="Css8.html">Css фича №8 </a> </li>
-		<li> <a href="#"> Css фича №9 </a> </li>
+		<li> <a href="#">Css фича №9</a> </li>
 		<li> <a href="#modal_open">Открыть модальное окно</a></li>
+		<li> <a href="#strax">Страшилочка </a> </li>
 		</ol>
 	</div>
 	
@@ -142,9 +143,19 @@
     	padding:15px;
     	overflow:auto;}
   </style>
-</head>
+
 
 <!-- Конец кода кнопки -->
+<!-- Новая кнопочка, страшилка  -->
+<style type="text/css"> 
+#strax{
+	
+}
+
+
+	</style>
+
+<!-- Конец страшилки -->
 	<footer>
 		<div class="awesome">
 	  <a href="#"><i class="fas fa-camera-retro"></i></a> 
@@ -152,7 +163,9 @@
       <a href="#"><i class="fas fa-calculator"></i></a>
       <a href="Work.html"><i class="fas fa-home"></i></a>
 		</div>
+		<div class="down">
 		<h5>Сайт ещё редактируется</h5>
+	</div>
 	</footer>
 	</body>
 	</html>
