--- a/Konstantin Bukin/index.html
+++ b/Konstantin Bukin/index.html
@@ -19,6 +19,10 @@
 <li><a href="https://codepen.io/kostetdit/pen/wvwYRLG">7 работа</a></li>
 <li><a href="https://codepen.io/kostetdit/pen/yLBRGVO">8 работа</a></li>
 </ul>
+<a href="https://vk.com/id188272754"> <img src=".\Vk.png" width="40" height="40" alt="ВК" style="position: absolute;left: 30px; top: 80px;"> </a>
+<a href=""></a>
+
+
 </font>
 </body>
 </html>
