--- a/Vladimir Frolov/vovanfroloff.html
+++ b/Vladimir Frolov/vovanfroloff.html
@@ -13,20 +13,21 @@
     		font-size: 12px;
 			margin: 0;
 			padding: 0;
-			background: #D9D9D9;
-			color: #6C6960;
+			background: #6C6960;
+			color: #fff;
 			height: 1000px;
 			display: flex;	
 		}
 		.fon {
 			width: 250px;
 			height: 400px;
-			background: #fff;
-			border-radius: 5px;
+			background: #292929;
 			box-shadow: 7px 7px 5px rgba(0,0,0,0.6);
 			position: relative;
 			left: 50px;
 			top: 50px;
+      box-shadow: 10px 10px 10px #4dc247;
+      border-radius: 5px;
 		}
 		.txt {
 			position: relative;
@@ -44,28 +45,27 @@
 			height: 70px;
 			bottom: 0;
 			position: absolute;
-			border-top: 2px solid #6C6960; 
+			border-top: 2px solid  #4dc247; 
 		}
 		.social a {
       		font-size: 10px;
       		text-align: center;
-      		width: 20px;
-      		height: 20px;
+      		width: 21px;
+      		height: 21px;
       		float: left;
-      		background: #fff;
-      		border: 1px solid #6C6960;
-      		border-radius: 10px;
+      		background: #4dc247;
       		margin: 0 10px 10px 0;
       		padding: 6px;
-      		color: #6C6960;
+      		color: #fff;
       		position: relative;
       		top: 17px;
-      		left: 43px;
+      		left: 47px;
+          box-shadow: 0px 0px 10px #4dc247;
     	}
-    	.youtube a:hover {background: #6C6960; color: #fff;}
-    	.vk a:hover {background: #6C6960; color: #fff;}
-    	.instagram a:hover {background: #6C6960; color: #fff;}
-    	.github a:hover {background: #6C6960; color: #fff;}
+    	.youtube a:hover {background: #6C6960; color: #fff; transform: scale(1.2, 1.2); box-shadow: none;}
+    	.vk a:hover {background: #6C6960; color: #fff; transform: scale(1.2, 1.2); box-shadow: none;}
+    	.instagram a:hover {background: #6C6960; color: #fff; transform: scale(1.2, 1.2); box-shadow: none;}
+    	.github a:hover {background: #6C6960; color: #fff; transform: scale(1.2, 1.2); box-shadow: none;}
 
     	.foto {
     		width: 150px;
@@ -78,25 +78,24 @@
     		border-radius: 10px;
     		position: relative;
     		top: -245px;
-    		left: 47px;
-    		border: 2px solid #6C6960;
+    		left: 50px;
     	}
     	.content {
     		width: 950px;
     		height: 400px;
-    		background: #fff;
+    		background: #292929;
     		position: absolute;
-    		border-radius: 5px;
     		top: 50px;
     		left: 350px;
-    		box-shadow: 7px 7px 5px rgba(0,0,0,0.6);
+    		box-shadow: 10px 10px 10px #4dc247;
     		float: left;
+        border-radius: 5px;
 
     	}
     	.cnt {
     		width: 50%;
     		height: 100%;
-    		border-right: 2px solid #6C6960;
+    		border-right: 2px solid #4dc247;
     		position: absolute;
     		top: 0;
     	}
@@ -110,53 +109,50 @@
     	.cttn {
     		width: 100%;
     		height: 70px;
-    		border-bottom: 2px solid #6C6960;
 
     	}
     	a {
       		text-decoration: none;
       	}
     	.button {
-			width: 50px;
-      		height: 50px;
-      		background: #fff;
-      		border-radius: 5px;
-      		font-family: 'Arctic', cursive;
-      		color: #6C6960;
-      		overflow: hidden;
-      		border: 2px solid #6C6960;
-      		display: flex;
-      		justify-content: center;
-      		align-items: center;
-      		margin: 5px;
-      		font-size: 20px;
+		    width: 50px;
+      	height: 50px;
+      	background: #4dc247;
+      	font-family: 'Arctic', cursive;
+      	color: #fff;
+      	overflow: hidden;
+      	display: flex;
+      	justify-content: center;
+      	align-items: center;
+      	margin: 5px;
+      	font-size: 20px;
+        box-shadow: 0px 0px 10px #4dc247;
 		}
 		.button:hover {
 			background: #6C6960;
 			color: #fff;
-			transition: 0.6s;
-			border: 2px solid #fff;
+      transform: scale(1.1, 1.1);
+      box-shadow: none;
 		}
 		.btn {
 			width: 100px;
       		height: 50px;
-      		background: #fff;
-      		border-radius: 5px;
+      		background: #4dc247;
       		font-family: 'Arctic', cursive;
-      		color: #6C6960;
+      		color: #fff;
       		overflow: hidden;
-      		border: 2px solid #6C6960;
       		display: flex;
       		justify-content: center;
       		align-items: center;
       		margin: 5px;
       		font-size: 20px;
+          box-shadow: 0px 0px 10px #4dc247;
 		}
 		.btn:hover {
 			background: #6C6960;
 			color: #fff;
-			transition: 0.6s;
-			border: 2px solid #fff;
+      transform: scale(1.1, 1.1);
+      box-shadow: none;
 		}
 		.tabl {
 			position: relative;
@@ -175,19 +171,20 @@
 		.content2 {
 			width: 950px;
     		height: 400px;
-    		background: #fff;
+    		background: #292929;
     		position: absolute;
-    		border-radius: 5px;
     		top: 480px;
     		left: 350px;
-    		box-shadow: 7px 7px 5px rgba(0,0,0,0.6);
+    		box-shadow: 10px 10px 10px #4dc247;
     		float: left;
+        border-radius: 5px;
 		}
 		.bar {
 			width: 100px;
 			height: 15px;
-			background: #6C6960;
-			border-radius: 5px;
+			background: #4dc247;
+      margin: 0 2px;
+      box-shadow: 0px 0px 10px #4dc247;
 		}
 		.bar1 {
 			position: relative;
@@ -196,10 +193,10 @@
 		}
 		.bar2 {
 			width: 100px;
-			height: 15px;
-			background: #fff;
-			border-radius: 5px;
-			border: 2px solid #6C6960;
+			height: 14px;
+			background: #292929;
+			border: 1px solid #4dc247;
+      box-shadow: 0px 0px 10px #4dc247;
 		}
 
 		#zatemnenie {
@@ -239,7 +236,7 @@
       	.close:hover {
       		transform: scale(1.2, 1.2);
       	}
-      	#zatemnenie1 {
+        #zatemnenie1 {
         background: rgba(102, 102, 102, 0.5);
         width: 100%;
         height: 100%;
@@ -247,26 +244,37 @@
         top: 0;
         left: 0;
         display: none;
-      	}
-      	#okno1 {
-        	width: 250px;
-        	height: 300px;
-        	text-align: center;
-        	padding: 15px;
-        	border-radius: 10px;
-        	color: #6C6960;
-        	position: absolute;
-        	top: 0;
-        	right: 0;
-        	bottom: 0;
-        	left: 0;
-        	margin: auto;
-        	background: #fff;
-        	display: flex;
-        	justify-content: center;
-        	align-items: center;
-      	}
-      	#zatemnenie1:target {display: block;}
+        }
+        #okno1 {
+          width: 250px;
+          height: 300px;
+          text-align: center;
+          padding: 15px;
+          color: #fff;
+          position: absolute;
+          top: 0;
+          right: 0;
+          bottom: 0;
+          left: 0;
+          margin: auto;
+          background: #292929;
+          display: flex;
+          justify-content: center;
+          align-items: center;
+        }
+        #zatemnenie1:target {display: block;}
+        .close1 {
+          position: absolute;
+          top: 1px;
+          right: 3px;
+          color: #fff;
+          text-decoration: none;
+          font-size: 25px;
+          cursor:pointer;
+        }
+        .close1:hover {
+          transform: scale(1.1, 1.1);
+        }
       	.fa-thermometer-three-quarters {
       		font-size: 100px;
       		top: 30px;
@@ -275,8 +283,8 @@
       	.fa-thermometer-three-quarters:hover {
       		color: #00FFFF;
       	}
-      	.fa-cog {
-          color: #6C6960;
+        .fa-cog {
+          color: #fff;
           position: absolute;
           font-size: 20px;
           top: 8px;
@@ -285,27 +293,27 @@
         .fa-cog:hover {
           transform: scale(1.1, 1.1);
         }
-        .darktema {
+        .obtema {
           width: 250px;
           height: 50px;
-          background: #fff;
-          color: #6C6960;
-          border: 2px solid #6C6960;
+          background: #4dc247;
+          box-shadow: 0px 0px 10px #4dc247;
+          color: #fff;
           font-size: 10px;
           display: flex;
           justify-content: center;
           align-items: center;
         }
-        .darktema:hover {
+        .obtema:hover {
           background: #6C6960;
-          color: #fff;
+          box-shadow: none;
           transform: scale(1.1, 1.1);
         }
 	</style>
 </head>
 <body>
  <div class="fon">
- 	<a href="#zatemnenie1"><i class="fa fa-cog" aria-hidden="true"></i></a>
+  <a href="#zatemnenie1"><i class="fa fa-cog" aria-hidden="true"></i></a>
  	<h1 class="txt">Владимир Фролов</h1>
  	<p class="txt1">Начинающий Веб-разработчик</p>
  	<div class="foother">
@@ -436,8 +444,8 @@
 
     <div id="zatemnenie1">
       <div id="okno1">
-        <a href="vovanfroloff.html"><div class="darktema"><h1>Темная тема</h1></div></a>
-        <a href="#" class="close"><i class="fa fa-times" aria-hidden="true"></i></a>
+        <a href="vladimir_official.html"><div class="obtema"><h1>Обычная тема</h1></div></a>
+        <a href="#" class="close1"><i class="fa fa-times" aria-hidden="true"></i></a>
       </div>
     </div>
 </body>
