--- a/Pol'ka Vladislav/index.html
+++ b/Pol'ka Vladislav/index.html
@@ -45,6 +45,7 @@
 			<a class="p8" href="footer/index.html">Footer</a>
 			<a class="p9" href="scroll/index.html">Scroll</a>
 			<a class="p10" href="checkbox/index.html">Checkbox</a>
+			<a class="p11" href="fade/index.html">Fade</a>
 		</div>
 
 		<hr class="palka2">
