--- a/Daniil Dorofeev/index.html
+++ b/Daniil Dorofeev/index.html
@@ -10,6 +10,12 @@
 </head>
 <body>
 	<div class="container">
+		<div class="width">
+			<div class="night-theme night-on">
+				<i class="far fa-moon"></i>
+				<p>Ночная тема</p>
+			</div>
+		</div>
 		<img src="avatar.png">
 		<div class="name block">
 			<h1>Дорофеев Даниил</h1>
