--- a/Klitvin Aleksandr/сайт/index.html
+++ b/Klitvin Aleksandr/сайт/index.html
@@ -52,6 +52,9 @@
      <section class="eleven">
       <h2><a href="files/link/index.html">Оригинальная ссылка</a></h2>
     </section>
+     <section class="tvelve">
+      <h2><a href="files/Методы для работы с классами/index.html">Методы CSS</a></h2>
+    </section>
   </div>
 </div>
 
