--- a/Daniil Dorofeev/index.html
+++ b/Daniil Dorofeev/index.html
@@ -11,7 +11,7 @@
 <body>
 	<div class="container">
 		<div class="width">
-			<div class="night-theme night-on">
+			<div class="theme">
 				<i class="far fa-moon"></i>
 				<p>Ночная тема</p>
 			</div>
