--- a/MokhnatkinDanila/Sayt.html
+++ b/MokhnatkinDanila/Sayt.html
@@ -29,7 +29,7 @@
 		<li> <a href="Css8.html">Css фича №8 </a> </li>
 		<li> <a href="#">Css фича №9</a> </li>
 		<li> <a href="#modal_open">Открыть модальное окно</a></li>
-		<li> <a href="#strax">Страшилочка </a> </li>
+		
 		</ol>
 	</div>
 	
@@ -56,6 +56,7 @@
 <!-- кнопка -->
 <style type="text/css">
     .my_modal{
+
     	position:fixed;
     	top:0;
     	right:0;
@@ -147,16 +148,11 @@
 
 <!-- Конец кода кнопки -->
 <!-- Новая кнопочка, страшилка  -->
-<style type="text/css"> 
-#strax{
-	
-}
 
-
-	</style>
 
 <!-- Конец страшилки -->
 	<footer>
+        
 		<div class="awesome">
 	  <a href="#"><i class="fas fa-camera-retro"></i></a> 
 	  <a href="#"><i class="fas fa-calendar-check"></i></a>
@@ -166,6 +162,12 @@
 		<div class="down">
 		<h5>Сайт ещё редактируется</h5>
 	</div>
+    <div class="strashilka">
+            <a class="imagetip" href="#" target="_blank">Хм, а что здесь?<span>
+                <img class="alignnone" src="shrek.png" /></span></a>
+
+        </div>
 	</footer>
+    <script type="text/javascript" src="js/Sayt.js"></script>
 	</body>
 	</html>
