--- a/Pol'ka Vladislav/index.html
+++ b/Pol'ka Vladislav/index.html
@@ -30,6 +30,7 @@
 			<a class="t10" href="parallax/index.html">#10</a>
 			<a class="t11" href="links/index.html">#11</a>
 			<a class="t12" href="border/index.html">#12</a>
+			<a class="t13" href="Rotate menu/index.html">#13</a>
 		</div>
 
 		<hr class="palka">
