Update two works

--- a/MokhnatkinDanila/Sayt.html
+++ b/MokhnatkinDanila/Sayt.html
@@ -9,7 +9,9 @@
 		<link rel="stylesheet" href="Sayt.css">
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
 	<header>
+		<div>
 		<img src="fon.jpg">
+	</div>
 	</header>
 	
 	<div class="gradient">
@@ -157,7 +159,7 @@
 	  <a href="#"><i class="fas fa-camera-retro"></i></a> 
 	  <a href="#"><i class="fas fa-calendar-check"></i></a>
       <a href="#"><i class="fas fa-calculator"></i></a>
-      <a href="Work.html"><i class="fas fa-home"></i></a>
+      <a href="Sayt.html"><i class="fas fa-home"></i></a>
 		</div>
 		<div class="down">
 		<h5>Сайт ещё редактируется</h5>
