--- a/Vladimir Frolov/vovanfroloff.html
+++ b/Vladimir Frolov/vovanfroloff.html
@@ -178,6 +178,9 @@
     		box-shadow: 10px 10px 10px #4dc247;
     		float: left;
         border-radius: 5px;
+        display: flex;
+        justify-content: center;
+        align-items: center;
 		}
 		.bar {
 			width: 100px;
@@ -309,6 +312,116 @@
           box-shadow: none;
           transform: scale(1.1, 1.1);
         }
+
+        .container {
+      position: relative;
+      width: 900px;
+      display: flex;
+      justify-content: space-around;
+    }
+    .container .card {
+      position: relative;
+      width: 250px;
+      background: linear-gradient(0deg,#1b1b1b,#222,#1b1b1b);
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      height: 300px;
+      border-radius: 4px;
+      text-align: center;
+      overflow: hidden;
+      transition: 0.5s;
+    }
+    .container .card:hover {
+      transform: translateY(-10px);
+      box-shadow: 0 15px 35px rgba(0,0,0,.5);
+    }
+    .container .card:before {
+      content: '';
+      position: absolute;
+      top: 0;
+      left: -50%;
+      width: 100%;
+      height: 100%;
+      background: rgba(255,255,255,.03);
+      pointer-events: none;
+      z-index: 1;
+    }
+    .percent {
+      position: relative;
+      width: 150px;
+      height: 150px;
+      border-radius: 50%;
+      box-shadow: inset 0 0 50px #000;
+      background: #222;
+      z-index: 1000;
+    }
+    .percent .number {
+      position: absolute;
+      top: 0;
+      left: 0;
+      width: 100%;
+      height: 100%;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      border-radius: 50%;
+    }
+    .percent .number h2 {
+      color: #fff;
+      font-size: 30px;
+      font-weight: 700;
+      transition: 0.5s;
+    }
+    .card:hover .percent .number h2 {
+      font-size: 40px;
+    }
+    .percent .number h2 span {
+      font-size: 24px;
+      color: #fff;
+      transition: 0.5s;
+    }
+    .text {
+      position: relative;
+      margin-top: 20px;
+      color: #fff;
+      font-weight: 700;
+      font-size: 18px;
+      letter-spacing: 1px;
+      text-transform: uppercase;
+      transition: 0.5s;
+    }
+    svg {
+      position: relative;
+      width: 150px;
+      height: 150px;
+      z-index: 1000;
+    }
+    svg circle {
+      width: 100%;
+      height: 100%;
+      fill: none;
+      stroke: #191919;
+      stroke-width: 10;
+      stroke-linecap: round;
+      transform: translate(5px,5px);
+    }
+    svg circle:nth-child(2) {
+      stroke-dasharray: 440;
+      stroke-dashoffset: 440;
+    }
+    .card:nth-child(1) svg circle:nth-child(2) {
+      stroke-dashoffset: calc(440 - (440 * 70) / 100);
+      stroke: #4dc247;
+    }
+    .card:nth-child(2) svg circle:nth-child(2) {
+      stroke-dashoffset: calc(440 - (440 * 80) / 100);
+      stroke: #4dc247;
+    }
+    .card:nth-child(3) svg circle:nth-child(2) {
+      stroke-dashoffset: calc(440 - (440 * 40) / 100);
+      stroke: #4dc247;
+    }
 	</style>
 </head>
 <body>
@@ -398,41 +511,51 @@
  	</div>
  </div>
  <div class="content2">
- 	<h1 class="txt">Мои навыки</h1>
- 	<table class="tabl1">
- 		<tr>
- 			<td><h1 class="bar1">HTML5</h1></td>
- 			<td><div class="bar"></div></td>
- 			<td><div class="bar"></div></td>
- 			<td><div class="bar"></div></td>
- 			<td><div class="bar"></div></td>
- 			<td><div class="bar2"></div></td>
- 		</tr>
- 		<tr>
- 			<td><h1 class="bar1">CSS3</h1></td>
- 			<td><div class="bar"></div></td>
- 			<td><div class="bar"></div></td>
- 			<td><div class="bar"></div></td>
- 			<td><div class="bar2"></div></td>
- 			<td><div class="bar2"></div></td>
- 		</tr>
- 		<tr>
- 			<td><h1 class="bar1">JavaScript</h1></td>
- 			<td><div class="bar"></div></td>
- 			<td><div class="bar"></div></td>
- 			<td><div class="bar2"></div></td>
- 			<td><div class="bar2"></div></td>
- 			<td><div class="bar2"></div></td>
- 		</tr>
- 		<tr>
- 			<td><h1 class="bar1">JQuery</h1></td>
- 			<td><div class="bar"></div></td>
- 			<td><div class="bar"></div></td>
- 			<td><div class="bar2"></div></td>
- 			<td><div class="bar2"></div></td>
- 			<td><div class="bar2"></div></td>
- 		</tr>
- 	</table>
+ 	<div class="container">
+    <div class="card">
+      <div class="box">
+        <div class="percent">
+          <svg>
+            <circle cx="70" cy="70" r="70"></circle>
+            <circle cx="70" cy="70" r="70"></circle>
+          </svg>
+          <div class="number">
+            <h2>70<span>%</span></h2>
+          </div>
+        </div>
+        <h2 class="text">HTML</h2>
+      </div>
+    </div>
+    <div class="card">
+      <div class="box">
+        <div class="percent">
+          <svg>
+            <circle cx="70" cy="70" r="70"></circle>
+            <circle cx="70" cy="70" r="70"></circle>
+          </svg>
+          <div class="number">
+            <h2>80<span>%</span></h2>
+          </div>
+        </div>
+        <h2 class="text">CSS</h2>
+      </div>
+    </div>
+    <div class="card">
+      <div class="box">
+        <div class="percent">
+          <svg>
+            <circle cx="70" cy="70" r="70"></circle>
+            <circle cx="70" cy="70" r="70"></circle>
+          </svg>
+          <div class="number">
+            <h2>40<span>%</span></h2>
+          </div>
+        </div>
+        <h2 class="text">JavaScript</h2>
+      </div>
+    </div>
+  </div>
+ </div>
  </div>
 
  <div id="zatemnenie">
