Adden convertor (beta)

--- a/Kirill Rusanov/index.html
+++ b/Kirill Rusanov/index.html
@@ -64,6 +64,7 @@
                                 <div class="work"><a href="Css18/index.html">Фича 18</a></div>
                                 <div class="work"><a href="Slider/index.html">Слайдер</a></div>
                                 <div class="work"><a href="modal/index.html">Модальное окно</a></div>
+                                <div class="work"><a href="js/Convertor%20console.exe">Конвертор валют</a></div>
                             </div>
                         </div>
                     </div>
