--- a/Bogdan Bochkov/index.html
+++ b/Bogdan Bochkov/index.html
@@ -19,6 +19,8 @@
 <li><a href="https://codepen.io/PiromanX0/pen/ZEzqZNX">9 работа</a></li>
 <li><a href="https://codepen.io/PiromanX0/pen/RwwwXMe">10 работа</a></li>
 <li><a href="https://codepen.io/PiromanX0/pen/rNNNXKy">11 работа</a></li>
+<li><a href="https://codepen.io/PiromanX0/pen/PoozgBz">12 работа</a></li>
+<li><a href="https://codepen.io/PiromanX0/pen/rNNLbrZ">13 работа</a></li>
 </ul>
 </body>
 </html>
