--- a/Konstantin Bukin/index.html
+++ b/Konstantin Bukin/index.html
@@ -6,10 +6,9 @@
 <body link="#fff" vlink="#fff" bgcolor="#7b1fa2" align="center" >
 <font color="white" face= "Arial">
 <H2>Резюме</H2>
-<hr>  Меня зовут Константин Букин
-
+<hr> <b> Меня зовут Константин Букин </b>
 <br>Я начинающий программист и я сделал несколько работ
-<br><ul align="left"> 
+<br> <b><ul align="left"> 
 <li><a href="https://codepen.io/kostetdit/pen/RwbeMrg">1 работа</a></li>
 <li><a href="https://codepen.io/kostetdit/pen/RwbeMeM">2 работа</a></li>
 <li><a href="">3 работа(не готова)</a></li>
@@ -18,9 +17,9 @@
 <li><a href="">6 работа(не готова)</a></li>
 <li><a href="https://codepen.io/kostetdit/pen/wvwYRLG">7 работа</a></li>
 <li><a href="https://codepen.io/kostetdit/pen/yLBRGVO">8 работа</a></li>
-</ul>
+</ul></b>
 <a href="https://vk.com/id188272754"> <img src=".\Vk.png" width="40" height="40" alt="ВК" style="position: absolute;left: 30px; top: 80px;"> </a>
-<a href=""></a>
+<a href="https://"></a>
 
 
 </font>
