--- a/MokhnatkinDanila/Sayt.html
+++ b/MokhnatkinDanila/Sayt.html
@@ -36,15 +36,18 @@
 			<a class="imagetip" href="#">Хм, а что здесь?<span>
                 <img class="alignnone" src="shrek.png" /></span></a>
 
-        </div>  </li>
+        </div>  
+    </li>
 		<li> <a href="#modal_open">Открыть модальное окно</a></li>
-		<li> <h3>Якорная ссылки:</h3> </li>
+		<li> <h3>Якорные ссылки:</h3> </li>
 		<li> <a href="#anchor">Первая</a> </li>
 		<li> <a href="#anchor2">Вторая</a> </li>
 		
 		</ol>
 	</div>
-	
+	<div class="down">
+		<h5>Сайт ещё редактируется</h5>
+	</div>
 <div id="modal_open" class="my_modal">
   <div class="my_modal-dialog">
     <div class="my_modal-content">
@@ -164,16 +167,15 @@
 
 <!-- Конец страшилки -->
 	<footer>
-        
+        <!--
 		<div class="awesome">
 	  <a href="#"><i class="fas fa-camera-retro"></i></a> 
 	  <a href="#"><i class="fas fa-calendar-check"></i></a>
       <a href="#"><i class="fas fa-calculator"></i></a>
       <a href="Sayt.html"><i class="fas fa-home"></i></a>
 		</div>
-		<div class="down">
-		<h5>Сайт ещё редактируется</h5>
-	</div>
+	-->
+		
     
 	</footer>
 <div class="path1">
