Klitvin work VAL

--- a/Klitvin Aleksandr/сайт/index.html
+++ b/Klitvin Aleksandr/сайт/index.html
@@ -59,6 +59,9 @@
      <div class ='section threten'>
       <h2><a href="files/Анимация JQ/index.html">Анимация JQ</a></h2>
     </div >
+    <div class ='section fourteen'>
+      <h2><a href="files/val/index.html">Работа с формой val</a></h2>
+    </div >
   </div>
 </div>
 </div>
