--- a/Bogdan Ryakin/index.html
+++ b/Bogdan Ryakin/index.html
@@ -64,7 +64,7 @@
 				</header>
 				<div class="inner gallery">
 					<div class="row gtr-0">
-						<div class="col-3 col-12-mobile"><a href="images/fulls/rofl.jpg" class="image fit"><img src="images/thumbs/rofl.jpg" alt="" title="CSS F1" /></a></div>
+						<div class="col-3 col-12-mobile"><a href="feature1/index.html" class="image fit"><img src="images/thumbs/rofl.jpg" alt="" title="CSS F1" /></a></div>
 						<div class="col-3 col-12-mobile"><a href="images/fulls/rofl.jpg" class="image fit"><img src="images/thumbs/rofl.jpg" alt="" title="CSS F2" /></a></div>
 						<div class="col-3 col-12-mobile"><a href="images/fulls/rofl.jpg" class="image fit"><img src="images/thumbs/rofl.jpg" alt="" title="CSS F3" /></a></div>
 						<div class="col-3 col-12-mobile"><a href="images/fulls/08.jpg" class="image fit"><img src="images/thumbs/rofl.jpg" alt="" title="CSS F4" /></a></div>
